@@ -1,7 +1,7 @@
 Package: mlt
 Title: Most Likely Transformations
 Version: 1.0-4
-Date: 2018-10-03
+Date: 2018-12-03
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org", comment = c(ORCID = "0000-0001-8301-0471"))  
 Description: Likelihood-based estimation of conditional transformation
